# SketchHub

./: README.md  docker-compose.yaml  init.sql
backend/: models.py  pyproject.toml
backend/sketchhub/: .gitignore  app.py
backend/sketchhub/authentication/controllers/: auth.py
backend/sketchhub/authentication/views/: auth.py
backend/sketchhub/common/: sessions.py
frontend/components/: Footer.js  Header.js
frontend/components/main_page/: About.js  Banner.js  Directions.js
frontend/pages/: index.js
frontend/pages/join/: index.js
frontend/styles/: Join.module.css  Main.module.css  globals.css
frontend/styles/components/: Header.module.css
frontend/styles/components/main_page/: About.module.css  Banner.module.css  Sections.module.css
