[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["arina krumm <92879566+arinaaaaaaa@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
sqlacodegen = "^2.3.0"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.36"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
